# ai-agent

./: Dockerfile  ai_agent.py  git_utils.py  github_client.py  main.py  pyproject.toml  requirements.txt  state_manager.py
src/: ai_agent.py  config.py  github_client.py  main.py  state_manager.py
src/tools/: file_tools.py  git_utils.py
tests/tools/: test_file_tools.py  test_git_utils.py
tools/: file_tools.py  test_tools.py
