[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.poetry.dependencies]
langchain-community = "^0.3.27"
